<resources>
    <string name="app_name">Sport Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crea_tu_cuenta">CREA TU CUENTA</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="e_mail">E-mail</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="bienvenida">Bienvenidos</string>
    <string name="calzado">CALZADO</string>
    <string name="novedades">Novedades</string>
    <string name="hint_numero_tarjeta">Número de tarjeta</string>
    <string name="subtitle_forma_pago">Complete su compra proporcionando sus datos de pago</string>
    <string name="hint_cvc">CVC</string>
    <string name="hint_nombre_titular">Nombre del titular de la tarjeta</string>
    <string name="himt_expiracion">Expiración</string>
    <string name="descubre">DESCUBRE</string>
    <string name="not_item_selected">No se lecciona ninguna vista</string>
    <string name="error_msj_correo_contrasena_req">Correo/Contraseña es requerido!</string>
    <string name="error_msj_contrasena_esp">Contraseña no debe contener espacios!</string>
    <string name="error_msj_correo_fort">El formato del correo es invalido!</string>
    <string name="error_msj_correo_contrasena_inv">Correo/Contraseña es invalido!</string>
    <string name="error_msj_form_incompleto">Debe llenar correctamente todos los campos!</string>
    <string name="error_msj_nombre_min_caract">Nombre debe contener 3 caracteres minimo!</string>
    <string name="error_msj_contrasena_min_caract">Contraseña debe contener 5 caracteres minimo!</string>
    <string name="error_msj_correo_registrado">El correo ya se encuentra registrado, ingrese otro!</string>
    <string name="error_msj_contrasenas_diferentes">Las contraseñas no coiciden!</string>
    <string name="error_msj_eta_numero_requerido">Ingrese un número de tarjeta válido</string>
    <string name="error_msj_eta_numero_invalido">Ingrese los 16 digitos de su tarjeta.</string>
    <string name="error_msj_eta_cvc_invalido">Ingrese los 3 dígitos</string>
    <string name="error_msj_eta_expiracion_invalido">Ingrese un expiración válido</string>
    <string name="error_msj_eta_cvc_requerida">Ingrese un CVC válido</string>
    <string name="error_msj_eta_titular_requerida">Ingrese un Nombre del titular válido</string>
    <string name="compras">Compras</string>
    <string name="folio">FOLIO: </string>
    <string name="fecha">Fecha: </string>
    <string name="estado">Estado: </string>
    <string name="usuario">Usuario</string>
    <string name="compra_exitosa">Compra exitosa!</string>
    <string name="title_carrito_de_compra">CARRITO DE COMPRA</string>
    <string name="title_detalles_del_pago">DETALLES DEL PAGO</string>
    <string name="title_novedades">NOVEDADES</string>
    <string name="msg_error_login_invalid">Correo/Contraseña invalido!</string>
    <string name="msg_error_server">Ocurrio un error inesperado, intente mas tarde.</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="default_notification_channel_id"  translatable="false">default_notification_channel_id</string>
    <string name="google">google</string>
    <string name="id_cliente_web">744462903672-918e5dbtfkvthsgbpn1phe3rqbcdnth9.apps.googleusercontent.com</string>
    <string name="anadir_al_carrito">Añadir al carrito</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="msg_error_cargar_categoria">Ocurrió un error al cargar la categoria.</string>
    <string name="msg_error_cargar_producto">Ocurrió un error al cargar los productos.</string>
    <string name="msg_error_cargar_product">Ocurrió un error al cargar el producto.</string>
    <string name="datos_de_usuario">DATOS DE USUARIO</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="total">TOTAL</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="sin_compras">Sin Compras</string>
    <string name="realice_su_primera_compra">Realice su primera compra</string>
    <string name="example_email">example@gmail.com</string>
    <string name="no_tiene_cuenta">¿No tiene una cuenta? Regístrese</string>
    <string name="tenis_nike_air_max">TENIS NIKE AIR MAX</string>
    <string name="para_hombre_original">Para hombre  Original</string>
    <string name="talla_veinticinco">Talla: 25 cm</string>
    <string name="dos_mil_trescientos_noventa_y_nueve">$2,399.00 MXM</string>
    <string name="tenis">Tenis</string>
    <string name="entregado">Entregado</string>
    <string name="doce_doce">12/12/12</string>
    <string name="doscientos_veinte">$ 220 MXN</string>
    <string name="folio_cero_cero_uno">0000000001</string>
    <string name="clasicos_tenis_descripcion">Clásicos tenis de correr, con un diseño de corte bajo. Más que un calzado, es una declaración de estilo. Los Nike Air
            Max llegaron a la escena en el 87 y ganarón seguidores en el mundo.</string>
    <string name="envio">Envio</string>
</resources>