<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.auth.SignUpFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_sport_store" />

    <TextView
        android:text="@string/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/lbl_input"/>

    <EditText
        android:id="@+id/edtSigninNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_primary" />

    <TextView
        android:text="@string/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/lbl_input"/>

    <EditText
        android:id="@+id/edtSigninEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_primary" />

    <TextView
        style="@style/lbl_input"
        android:text="@string/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtSigninContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_primary" />

    <TextView
        style="@style/lbl_input"
        android:text="@string/confirmar_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtSigninContrasenaConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_primary" />

    <Button
        android:id="@+id/btnSigninSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/crear_cuenta"
        style="@style/txt_btn_dark_primary"
        android:background="@drawable/btn_dark_primary"/>


</LinearLayout>