<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.home.HomeFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_primary"
        app:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/imgProducto"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/dark_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tenis"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/nombreProducto"
            style="@style/lbl_input"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProducto"
            tools:text="@string/tenis_nike_air_max" />

        <TextView
            android:id="@+id/precioProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/nombreProducto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/imgProducto"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/dos_mil_trescientos_noventa_y_nueve" />

        <TextView
            android:id="@+id/descripcionProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreProducto"
            tools:text="@string/para_hombre_original" />

        <TextView
            android:id="@+id/descripcionLargaProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcionProducto"
            tools:text="@string/clasicos_tenis_descripcion" />

        <Button
            android:id="@+id/buttonAnadirCarrito"
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/anadir_al_carrito"
            app:layout_constraintBottom_toTopOf="@+id/buttonFinalizarCompra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/txt_btn_dark_primary"
            android:background="@drawable/btn_dark_primary" />

        <Button
            android:id="@+id/buttonFinalizarCompra"
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/finalizar_compra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/txt_btn_dark_primary"
            android:background="@drawable/btn_dark_primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>