<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".7">

                <TextView
                    style="@style/lbl_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/folio" />

                <TextView
                    android:id="@+id/histCompOutFolio"
                    style="@style/lbl_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0000000001" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3">

                <TextView
                    android:id="@+id/histCompOutCosto"
                    style="@style/lbl_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 220 MXN"
                    android:textAlignment="textEnd" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5">

                <TextView
                    style="@style/lbl_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha" />

                <TextView
                    android:id="@+id/histCompOutFecha"
                    style="@style/lbl_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/12/12" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5">

                <TextView
                    style="@style/lbl_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estado" />

                <TextView
                    android:id="@+id/histCompOutEstado"
                    style="@style/lbl_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Entregado" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>